# family_budget

./: .gitignore  .pre-commit-config.yaml  README.md  package-lock.json  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: check_makemigrations.yaml  check_pep8.yaml  develop.yaml  develop.yml  family_budget_workflow.yml  frontend.yml  main.yaml  main.yml  pytest.yaml
backend/: .env.develop  .env.prod  .env.sqlite  .env.sqlite3  Dockerfile  Dockerfile.develop  Dockerfile.prod  manage.py  requirements.txt
backend/api/: fields.py  filters.py  permissions.py  serializers.py  urls.py  views.py  viewsets.py
backend/budget/: admin.py  apps.py  models.py
backend/budget/migrations/: 0001_initial.py  0002_alter_balance_options_alter_category_options_and_more.py  0002_alter_category_icon.py  0002_initial.py  0003_alter_income_options_alter_moneybox_options_and_more.py  0003_budgetcategory_default_use_category_default_use_and_more.py  0003_remove_category_user.py  (+10 more)
backend/core/: apps.py  exceptions.py  fields.py  forms.py  utils.py  validators.py  views.py
backend/family_budget/: asgi.py  settings.py  urls.py  wsgi.py
backend/users/: admin.py  models.py  settings.py  validators.py  views.py
backend/users/urls/: authtoken.py  (+1 more)
frontend/: .eslintrc.js  .gitignore  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: firebase.js  index.jsx  index.scss  index.tsx  react-app-env.d.ts
infra/: docker-compose.yaml
tests/: bak_test_requirements.py  bak_test_users.py  conftest.py  serializers.py  test_docker_compose.py  test_foodgram_yaml.py  test_readme.py  test_requirements.py  test_settings.py  test_workflow.py  utils.py
tests/fixtures/: fixture_data.py  fixture_user.py
(+257 files in other folders)
